# mobile-cv-suite

./: .gitmodules  README.md  mobile-cv-suite-config.cmake
.github/workflows/: build.yml
scripts/: build.sh  mobile-cv-suite-config.cmake  package.sh
scripts/android/: build.sh  combine.sh  drop_library_soname_suffixes.py  extract_cmake_flags.py  opencv.config.py  strip.sh
scripts/components/: accelerated-arrays.sh  cereal.sh  cxxopts.sh  dbow2.sh  eigen.sh  g2o.sh  jsonl-recorder.sh  openblas.sh  opencv.sh  pangolin.sh  poselib.sh  suitesparse.sh  theia.sh  yaml-cpp.sh
scripts/components/loguru/: CMakeLists.txt  build.sh
scripts/ios/: OpenCVConfig.cmake  build.sh  build_opencv.sh
